fixed spacing

--- a/stylefile.css
+++ b/stylefile.css
@@ -24,6 +24,7 @@ h1, h2, h3 {
 p, input, li {
   font-family: 'Roboto Condensed', sans-serif, Arial;
   color: #2a2a2a;
+  line-height: 1.5;
 }
 
 h1 {
@@ -90,12 +91,14 @@ nav ul {
   list-style-type: none;
   flex: 2;
   display: flex;
+  line-height: 1.5;
 }
 
 nav li {
   display: inline;
   text-align: center;
   flex: 1;
+  line-height: 1.5;
 }
 
 nav a, nav span {
@@ -126,12 +129,14 @@ img {
 article {
   flex: 4;
   padding: 0%;
+  line-height: 1.5;
 }
 
 aside {
   flex: 2.5;
   margin-left: 7px;
   padding: 1.5%;
+  line-height: 1.5;
 }
 
 aside a {
